Fix typo in task 4

--- a/templates/hw/task4.html
+++ b/templates/hw/task4.html
@@ -203,7 +203,7 @@
                  <li>
                     You will write the following classes in the <code>ai</code> package. While the amount of classes
                     here seems daunting, each class, ignoring all the imports and class declaration boilerplate, should
-                    only have 1-4 lines of code; You need not overthink this.
+                    only have 1-7 lines of code; You need not overthink this.
                  </li>
                  <li>
                     Decisions will be written such that they <strong>only override <em>one</em> of decide/doAction</strong>. 
@@ -270,10 +270,10 @@
                              </li>
                           </ul>
                        </li>
-                       <li><code>TargettingPlayer</code>
+                       <li><code>TargetingPlayer</code>
                           <ul>
                              <li>
-                                Create the <code>TargettingPlayer</code> class that extends <code>Decision</code>. Add a
+                                Create the <code>TargetingPlayer</code> class that extends <code>Decision</code>. Add a
                                 constructor that takes in a String for the name (so that the super constructor may be
                                 called) and a double representing the distance the player can stray from where the
                                 DynamicGameObject is targeting. You should make an instance variable to store this distance.
