--- a/templates/cse116/syllabus.html
+++ b/templates/cse116/syllabus.html
@@ -377,7 +377,7 @@
                 <li>
                     Lab absence policy: For each of the 3 category (Tracing quiz, interview, coding quiz), you may earn
                     up to 1 effort point during a 2nd chance lab.
-                    This will be done automatically and will apply whether you attempted to assessment and did not pass
+                    This will be done automatically and will apply whether you attempted the assessment and did not pass
                     on the first attempt, or if you did not even attend the first attempt lab. With this policy, if you
                     have to miss an assessment lab, there's no need to provide a doctors or any other documentation.
                     Stay home, stay safe, don't miss your siblings wedding. Whatever it is, you can miss any 1 lab with
